force-app/main/default/objects/Project_Item_Assignments__c/Project_Item_Assignments__c.object-meta.xml
<CustomObject>
    <label>Project Item Assignment</label>
    <nameField>
        <displayFormat>PIA-{0000}</displayFormat>
        <label>Project Item Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Item Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>