force-app/main/default/objects/Project_Item_Assignments__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Complex_Project__c</field>
            <operation>equals</operation>
            <valueField>Project_Team__c.Complex_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Team__c</referenceTo>
    <relationshipLabel>Project Item Assignments</relationshipLabel>
    <relationshipName>Project_Item_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>