force-app/main/default/objects/Project_Item_Assignments__c/fields/Item_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Item_Assignment__c</fullName>
    <label>Item Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Item__c.Complex_Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Complex_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Item__c</referenceTo>
    <relationshipLabel>Item Assignments</relationshipLabel>
    <relationshipName>Project_Item_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>